<resources>
    <string name="app_name">Sheriff of Nottingham</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="opening_fragment_label">Opening Fragment</string>
    <string name="setup_fragment_label">Setup Fragment</string>
    <string name="play">PLAY</string>
    <string name="cont">Continue</string>

    <string name="welcoming">Welcome to Nottingham</string>
    <string name="player_name">Player Name:</string>
    <string name="enter_name">Please enter your name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="select_num_players">Select the desired number of players</string>

    <string name="player_1_name">Player 1</string>
    <string name="player_2_name">Player 2</string>
    <string name="player_3_name">Player 3</string>
    <string name="player_4_name">Player 4</string>
    <string name="player_5_name">Player 5</string>

    <string name="return_label">Return</string>
    <string name="in_bag">Add to Bag</string>
    <string name="out_of_bag">Remove From Bag</string>

    <string name="go_to_bag">Go to Bag</string>
    <string name="go_to_hand">Go to Hand</string>
    <string name="go_to_stand">Go to Stand</string>

    <string name="discard">Set Aside for Discard</string>
    <string name="remove_discard">Remove From Discard</string>

    <string name="phase_complete">Phase ? Complete</string>
    <string name="deck_label_text">Choose a Card to Draw</string>
    <string name="deck_text">DECK</string>
    <string name="discard_stack_text">DISCARD</string>
    <string name="add_to_discard_stack">Add Your Cards to Discard</string>
    <string name="hand_size">Hand Size:</string>
    <string name="draw_label">Draw</string>
    <string name="truth">Good Job!!</string>
    <string name="lies">MWAHAHA!!!</string>


    <string-array name="player_selection">
        <item>3 PLAYERS</item>
        <item>4 PLAYERS</item>
        <item>5 PLAYERS</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>