<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="landscape"
    tools:context=".fragments.SetupFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:text="@string/player_name"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/et_player_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_player_name"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginHorizontal="100dp"
        android:textAlignment="center"
        android:hint="@string/enter_name"
        android:textSize="30dp"
        android:inputType="text"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@id/tv_player_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_continue_setup"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_continue_setup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:textSize="35sp"
        android:text="@string/cont"
        android:background="@color/button_green"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_player_name" />
</androidx.constraintlayout.widget.ConstraintLayout>