<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:screenOrientation="landscape"
    tools:context=".fragments.DeckFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/deck_frag_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/deck_label_text"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/deck_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/deck_text"
        android:textColor="@color/black"
        android:textSize="45sp"
        app:layout_constraintEnd_toStartOf="@id/discard_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deck_frag_label" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/current_hand_size_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/hand_size"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@id/top_of_deck"
        app:layout_constraintEnd_toStartOf="@id/top_of_discard"
        app:layout_constraintTop_toBottomOf="@id/deck_label"
        app:layout_constraintBottom_toTopOf="@id/current_hand_size_num"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/current_hand_size_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/berkshire_swash"
        android:text="?"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@id/top_of_deck"
        app:layout_constraintEnd_toStartOf="@id/top_of_discard"
        app:layout_constraintTop_toBottomOf="@id/current_hand_size_text"
        app:layout_constraintBottom_toTopOf="@id/add_cards_to_discard"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/discard_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/discard_stack_text"
        android:textColor="@color/black"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/deck_label"
        app:layout_constraintTop_toBottomOf="@id/deck_frag_label" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/top_of_deck"
        android:layout_width="150dp"
        android:layout_height="175dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/card_back"
        app:layout_constraintEnd_toStartOf="@id/top_of_discard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deck_label"
        app:layout_constraintBottom_toTopOf="@id/add_cards_to_discard"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/top_of_discard"
        android:layout_width="150dp"
        android:layout_height="175dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/legal_goods_apples"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/top_of_deck"
        app:layout_constraintTop_toBottomOf="@id/discard_label"
        app:layout_constraintBottom_toTopOf="@id/add_cards_to_discard"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_cards_to_discard"
        android:layout_width="wrap_content"
        android:paddingHorizontal="10dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/berkshire_swash"
        android:textSize="35sp"
        android:text="@string/add_to_discard_stack"
        android:background="@color/green"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_of_deck" />

</androidx.constraintlayout.widget.ConstraintLayout>