<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:screenOrientation="landscape"
    tools:context=".ThreePlayerBoardFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/player_name"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatToggleButton
        android:id="@+id/card_1"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/legal_goods_apples"
        android:text=""
        android:textOff=""
        android:textOn="Bag"
        android:textSize="30dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/card_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/player_name" />

    <androidx.appcompat.widget.AppCompatToggleButton
        android:id="@+id/card_2"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/legal_goods_apples"
        android:text=""
        android:textOff=""
        android:textOn="Bag"
        android:textSize="30dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/card_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/card_1"
        app:layout_constraintTop_toBottomOf="@id/player_name" />

    <androidx.appcompat.widget.AppCompatToggleButton
        android:id="@+id/card_3"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/legal_goods_apples"
        android:text=""
        android:textOff=""
        android:textOn="Bag"
        android:textSize="30dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/card_4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/card_2"
        app:layout_constraintTop_toBottomOf="@id/player_name" />

    <androidx.appcompat.widget.AppCompatToggleButton
        android:id="@+id/card_4"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/legal_goods_apples"
        android:text=""
        android:textOff=""
        android:textOn="Bag"
        android:textSize="30dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/card_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/card_3"
        app:layout_constraintTop_toBottomOf="@id/player_name" />

    <androidx.appcompat.widget.AppCompatToggleButton
        android:id="@+id/card_5"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/legal_goods_apples"
        android:text=""
        android:textOff=""
        android:textOn="Bag"
        android:textSize="30dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/card_6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/card_4"
        app:layout_constraintTop_toBottomOf="@id/player_name" />

    <androidx.appcompat.widget.AppCompatToggleButton
        android:id="@+id/card_6"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/legal_goods_apples"
        android:text=""
        android:textOff=""
        android:textOn="Bag"
        android:textSize="30dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/card_5"
        app:layout_constraintTop_toBottomOf="@id/player_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/return_button"
        android:layout_width="wrap_content"
        android:paddingHorizontal="10dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/berkshire_swash"
        android:textSize="35sp"
        android:text="@string/return_label"
        android:background="@color/green"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/in_bag_button"
        app:layout_constraintTop_toBottomOf="@id/card_3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/in_bag_button"
        android:layout_width="wrap_content"
        android:paddingHorizontal="10dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/berkshire_swash"
        android:textSize="35sp"
        android:text="@string/in_bag"
        android:background="@color/green"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/return_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_3" />

</androidx.constraintlayout.widget.ConstraintLayout>